[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.1",
    "lxml>=6.0.2",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
    "validators>=0.35.0",
]
